# Copernicus

./: .gitignore  .gitignore~  .gitmodules  CMakeLists.txt  CMakeLists.txt~  LICENSE.md  README.md  compile_commands.json  leds.ino.txt  ppack
cmake-modules/: Findntcore.cmake
config/: camera-resolver.sh  upload.config
include/: Copernicus.h  log.hpp  mjpgclient.h  perception.hpp  processing.hpp  tables.hpp  udpServer.hpp  udpclient.hpp
lib/debug/: boost_filesystem-vc140-mt-gd-1_63.lib  libboost_atomic-vc140-mt-gd-1_63.lib  libboost_chrono-vc140-mt-gd-1_63.lib  libboost_date_time-vc140-mt-gd-1_63.lib  libboost_system-vc140-mt-gd-1_63.lib  libboost_thread-vc140-mt-gd-1_63.lib  opencv_world320d.exp  opencv_world320d.lib
lib/release/: boost_filesystem-vc140-mt-1_63.lib  libboost_atomic-vc140-mt-1_63.lib  libboost_chrono-vc140-mt-1_63.lib  libboost_date_time-vc140-mt-1_63.lib  libboost_system-vc140-mt-1_63.lib  libboost_thread-vc140-mt-1_63.lib  opencv_world320.exp  opencv_world320.lib
linux_install/: install.sh  installboost.sh  installessentials.sh  installlibfreenect2.sh  installntcore.sh  installopencv.sh  installopenni.sh
logs/: latest.txt
oldsrc/: kinect.cpp  kinect.hpp  mjpgserver.cpp  mjpgserver.hpp
src/: Copernicus.cpp  compile_commands.json  gear.cpp  log.cpp  mjpgclient.cpp  perception.cpp  processing.cpp  pyserv.py  tables.cpp  udpServer.cpp
