cmake_minimum_required(VERSION 2.8.11)

project(copernicus)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake_modules")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib/out)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/debug)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/release)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/bin)
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREAD ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(MACE_DEMOS ON)
set(MACE_TESTS ON)

add_subdirectory(MACE)
add_subdirectory(ntcore-3.1.6)

file(GLOB_RECURSE HEADER_FILES "include/*.h" "include/.hpp")
file(GLOB_RECURSE SOURCE_FILES "src/*.cpp")

add_executable(copernicus ${SOURCE_FILES} ${HEADER_FILES})

target_compile_definitions(copernicus PUBLIC RESOURCE_FOLDER="${PROJECT_SOURCE_DIR}/res")

target_compile_options(wpiutil PRIVATE "$<$<CONFIG:DEBUG>:/MDd>" "$<$<CONFIG:RELEASE>:/MD>")

file(GLOB_RECURSE LIBRARY_DEBUG "lib/debug/*.lib")
file(GLOB_RECURSE LIBRARY_RELEASE "lib/release/*.lib")

target_link_libraries(copernicus "$<$<CONFIG:DEBUG>:${LIBRARY_DEBUG}>"  "$<$<CONFIG:RELEASE>:${LIBRARY_RELEASE}>")

target_link_libraries(copernicus LINK_PUBLIC wpiutil)

target_include_directories(copernicus PUBLIC "include/")

target_include_directories(copernicus PUBLIC ${MACE_INCLUDES})
target_link_libraries(copernicus LINK_PUBLIC MACE)

